theme: various spacing fixes

--- a/my-theme/static/_default.scss
+++ b/my-theme/static/_default.scss
@@ -15,9 +15,14 @@ a {
     }
 }
 
-p {
+p, li {
     font-size: 20px;
-    line-height: 32px;
+    line-height: 1.2em;
+}
+
+h2, h3, h4, h5 {
+    margin-top: 1.5em;
+    font-size: 2em;
 }
 
 img {
@@ -59,7 +64,7 @@ blockquote {
 }
 
 /* =Inline code */
-p > code {
+p > code, li > code {
   padding: .1em .3em;
   font-size: .75em;
   border: 1px solid $pencil;
@@ -70,7 +75,8 @@ p > code {
 
 /* =Bigger code blocks */
 pre {
-    padding: 0.6em;
+    font-size: .8em;
+    padding: .6em;
     border: $cloudy solid 1px;
     white-space: pre-wrap;
     border: 1px solid $pencil;
@@ -174,7 +180,7 @@ strong {
 /* =Titles */
 .page-title {
     margin-top:100px;
-    margin-bottom:125px;
+    margin-bottom:100px;
     text-align: center;
 }
 
@@ -245,7 +251,7 @@ main {
 .explore {
     text-align: center;
     color: $cloudy;
-    margin-top: 140px;
+    margin-top: 80px;
 }
 
 .explore__devider {
